[package]
name = "easylang"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.2", features = ["derive"] }
uuid = { version = "1.2", features = ["v4", "serde", "js"] }
pest = "2.7"
pest_derive = "2.7"
tracing = "0.1"
thiserror = "1.0"

[dev-dependencies]
tracing-subscriber = "0.3"
